crates/clogbox-derive/src/snapshots/clogbox_derive__r#enum__tests__derive_generic_enum_with_nested.snap
---
source: crates/clogbox-derive/src/enum.rs
expression: format_output(from_derive_input)
---
#[automatically_derived]
impl<C: ::clogbox_enum::Enum> ::clogbox_enum::Enum for MixedEnum<C>
where
    ::clogbox_enum::typenum::U1: ::std::ops::Add<<Inner as ::clogbox_enum::Enum>::Count>,
    <::clogbox_enum::typenum::U1 as ::std::ops::Add<
        <Inner as ::clogbox_enum::Enum>::Count,
    >>::Output: ::std::ops::Add<<C as ::clogbox_enum::Enum>::Count>,
    <<::clogbox_enum::typenum::U1 as ::std::ops::Add<
        <Inner as ::clogbox_enum::Enum>::Count,
    >>::Output as ::std::ops::Add<
        <C as ::clogbox_enum::Enum>::Count,
    >>::Output: ::clogbox_enum::typenum::Unsigned
        + ::clogbox_enum::generic_array::ArrayLength,
{
    type Count = <<::clogbox_enum::typenum::U1 as std::ops::Add<
        <Inner as ::clogbox_enum::Enum>::Count,
    >>::Output as std::ops::Add<<C as ::clogbox_enum::Enum>::Count>>::Output;
    fn from_usize(mut i: usize) -> Self {
        if i == 0 {
            return Self::First;
        } else {
            i -= 1;
        }
        if i
            < <<Inner as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE
        {
            return Self::Second(<Inner as ::clogbox_enum::Enum>::from_usize(i));
        } else {
            i
                -= <<Inner as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE;
        }
        if i
            < <<C as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE
        {
            return Self::Third(<C as ::clogbox_enum::Enum>::from_usize(i));
        } else {
            i
                -= <<C as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE;
        }
        unreachable!();
    }
    fn to_usize(self) -> usize {
        let mut i = 0;
        if let Self::First = self {
            return i;
        } else {
            i += 1;
        }
        if let Self::Second(value) = self {
            return i + value.to_usize();
        } else {
            i
                += <<Inner as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE;
        }
        if let Self::Third(value) = self {
            return i + value.to_usize();
        } else {
            i
                += <<C as ::clogbox_enum::Enum>::Count as ::clogbox_enum::typenum::Unsigned>::USIZE;
        }
        unreachable!()
    }
    fn name(&self) -> ::std::borrow::Cow<str> {
        match self {
            Self::First => ::std::borrow::Cow::from("First"),
            Self::Second(inner) => inner.name(),
            Self::Third(inner) => inner.name(),
        }
    }
}
