crates/clogbox-derive/src/snapshots/clogbox_derive__r#enum__tests__derive_nested.snap
---
source: crates/clogbox-derive/src/enum.rs
expression: "prettyplease::unparse(&syn::parse_file(&output).unwrap())"
---
#[automatically_derived]
impl ::clogbox_core::r#enum::az::CastFrom<usize> for Outer {
    fn cast_from(mut i: usize) -> Self {
        if i == 0 {
            return Self::A;
        } else {
            i -= 1;
        }
        if i
            < <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE
        {
            return Self::B(
                <Inner as ::clogbox_core::r#enum::az::CastFrom<usize>>::cast_from(i),
            );
        } else {
            i
                -= <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE;
        }
        if i
            < <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE
        {
            return Self::C(
                <Inner as ::clogbox_core::r#enum::az::CastFrom<usize>>::cast_from(i),
            );
        } else {
            i
                -= <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE;
        }
        unreachable!();
    }
}
#[automatically_derived]
impl ::clogbox_core::r#enum::az::Cast<usize> for Outer {
    fn cast(self) -> usize {
        let mut i = 0;
        if let Self::A = self {
            return i;
        } else {
            i += 1;
        }
        if let Self::B(value) = self {
            return i + value.cast();
        } else {
            i
                += <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE;
        }
        if let Self::C(value) = self {
            return i + value.cast();
        } else {
            i
                += <<Inner as ::clogbox_core::r#enum::Enum>::Count as ::clogbox_core::r#enum::typenum::Unsigned>::USIZE;
        }
        unreachable!()
    }
}
#[automatically_derived]
impl ::clogbox_core::r#enum::Enum for Outer
where
    ::clogbox_core::r#enum::typenum::U1: ::std::ops::Add<
        <Inner as ::clogbox_core::r#enum::Enum>::Count,
    >,
    <::clogbox_core::r#enum::typenum::U1 as ::std::ops::Add<
        <Inner as ::clogbox_core::r#enum::Enum>::Count,
    >>::Output: ::std::ops::Add<<Inner as ::clogbox_core::r#enum::Enum>::Count>,
    <<::clogbox_core::r#enum::typenum::U1 as ::std::ops::Add<
        <Inner as ::clogbox_core::r#enum::Enum>::Count,
    >>::Output as ::std::ops::Add<
        <Inner as ::clogbox_core::r#enum::Enum>::Count,
    >>::Output: ::clogbox_core::r#enum::generic_array::ArrayLength,
{
    type Count = ::clogbox_core::r#enum::typenum::operator_aliases::Sum<
        ::clogbox_core::r#enum::typenum::U1,
        ::clogbox_core::r#enum::typenum::operator_aliases::Sum<
            <Inner as ::clogbox_core::r#enum::Enum>::Count,
            <Inner as ::clogbox_core::r#enum::Enum>::Count,
        >,
    >;
    fn name(&self) -> ::std::borrow::Cow<str> {
        match self {
            Self::A => ::std::borrow::Cow::from("A"),
            Self::B(inner) => ::std::borrow::Cow::Owned(format!("B {}", inner.name())),
            Self::C(inner) => inner.name(),
        }
    }
}
